--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,5 @@ serde = { version = "1.0", features = ["derive"] }
 tokio = { version = "1.0", features = ["full"] }
 tower = "0.5.2"
 listenfd = "1.0.1"
+sha2 = "0.10.8"
+base62 = "2.2.1"
