--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,4 +12,4 @@ listenfd = "1.0.1"
 sha2 = "0.10.8"
 base62 = "2.2.1"
 lazy_static = "1.5.0"
-diesel = "2.2.8"
+diesel = { version = "2.2.8", features = ["postgres", "chrono"] }
