add config handler

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -10,8 +10,7 @@
             "name": "Cargo launch",
             "cargo": {
                 "args": [
-                    "build",
-                    "--lib"
+                    "build"
                 ]
             },
             "args": []
