include tracing for logs

--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,10 @@ target/
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
 
+# logs
+*.log
+logs/
+
 # Added by cargo
 
 /target
