--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,4 +16,7 @@ serde = { version = "1.0", features = ["derive"] }
 sha2 = "0.10.8"
 tokio = { version = "1.0", features = ["full"] }
 tower = "0.5.2"
+tracing = "0.1.41"
+tracing-appender = "0.2.3"
+tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
 url = "2.5.4"
