--- a/.env
+++ b/.env
@@ -1,1 +1,6 @@
-DATABASE_URL=postgres://postgres:postgres@localhost/shortlink
+DATABASE_URL=postgres://postgres:postgres@localhost/
+LOGGING_FILE_LOCATION=logs
+LOGGING_FILE_NAME=app.log
+LOGGING_LEVEL=INFO
+SHORTLINK_LENGTH=6
+
