--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,8 @@ diesel-async = { version = "0.5.2", features = ["postgres", "bb8"] }
 dotenv = "0.15.0"
 lazy_static = "1.5.0"
 listenfd = "1.0.2"
+metrics = "0.24.1"
+metrics-exporter-prometheus = "0.16.2"
 serde = { version = "1.0", features = ["derive"] }
 sha2 = "0.10.8"
 tokio = { version = "1.0", features = ["full"] }
